[project]
name = "prepsaa"
version = "0.1.3"
description = "AWS SAA 시험 대비를 위한 LLM 기반 CLI 도구"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langchain-anthropic>=0.3.12",
    "langchain-google-genai>=2.1.4",
    "langchain-openai>=0.3.16",
    "notion-client>=2.3.0",
    "notionize>=0.2.3",
    "pydantic-settings>=2.9.1",
    "tenacity>=9.1.2",
    "typer>=0.15.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.393",
    "ruff>=0.9.4",
]

[tool.ruff]
target-version = "py312"

[project.scripts]
prepsaa = "prepsaa.cli:app"

[build-system]
requires = ['hatchling', 'hatch-fancy-pypi-readme>=22.5.0']
build-backend = 'hatchling.build'
